--- a/index.html
+++ b/index.html
@@ -231,6 +231,20 @@
       <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Apple App Store" />
     </a>
   </section>
+  <section id="games" style="padding: 80px 60px; background: #111;">
+  <h2 style="text-align:center; font-size: 36px; color: var(--primary); margin-bottom: 40px;">Explore Our Games</h2>
+  <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px;">
+    <div style="background: #1e1e2f; padding: 20px; border-radius: 12px; text-align: center;">
+      <h3 style="color: var(--light); margin-bottom: 10px;">Game Title 1</h3>
+      <p style="color: #ccc;">A short description of this awesome game.</p>
+    </div>
+    <div style="background: #1e1e2f; padding: 20px; border-radius: 12px; text-align: center;">
+      <h3 style="color: var(--light); margin-bottom: 10px;">Game Title 2</h3>
+      <p style="color: #ccc;">Another fun game waiting for you.</p>
+    </div>
+    <!-- Add more game blocks here -->
+  </div>
+</section>
 
   <section class="subscribe" id="contact">
     <h2>Stay Updated</h2>
