--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
     <div class="hero-text">
       <h2>Level Up Your Play</h2>
       <p>Dive into a world of thrilling mobile games, power-ups, and endless excitement. Join the GameVerse community now!</p>
-      <button onclick="document.getElementById('games').scrollIntoView({ behavior: 'smooth' })">
+      <button onclick="document.getElementById('games').scrollIntoView({ behavior: 'smooth' });">
+  Start Playing
+</button>
   Start Playing
 </button>
     </div>
