--- a/index.html
+++ b/index.html
@@ -286,6 +286,13 @@
         <h3>Game Title 5</h3>
         <p>Race to the top in this high-speed, action-packed game.</p>
       </div>
+      <div class="game-card">
+        <a href="#">
+          <img src="https://via.placeholder.com/300x180?text=Game+6" alt="Game 6">
+        </a>
+        <h3>Game Title 6</h3>
+        <p>Embark on a thrilling journey through unique landscapes.</p>
+      </div>
     </div>
   </section>
 
