--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           <img src="https://via.placeholder.com/300x180?text=Game+1" alt="Game 1">
         </a>
         <h3>Game Title 1</h3>
-        <p>Short description of Game 1 goes here. Action-packed fun awaits!</p>
+        <p>Embark on an adventure in this epic RPG world.</p>
       </div>
       <div class="game-card">
         <a href="#">
